# data-ml-utils

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  LICENSE.txt  Makefile  README.md  README.rst  catalog-info.yaml  mkdocs.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md  semantic.yml  stale.yml
.github/workflows/: additional_checks.yaml  build-deploy.yml  techdocs.yml
data_ml_utils/boto3_botocore_client/: client_emr.py  client_initialisation.py  client_sagemaker.py
data_ml_utils/core/: config.py  databricks_utils.py  pyathena_utils.py
data_ml_utils/mlflow_databricks/: mlflow_model_utils.py  mlflow_tracker.py
data_ml_utils/pyathena_client/: client.py
docs/: conf.py  index.md  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/commands/: client_boto3.doctree  client_boto3_api_specs.doctree  client_emr.doctree  client_emr_api_specs.doctree  client_sagemaker.doctree  client_sagemaker_api_specs.doctree  pyathana.doctree  pyathena.doctree  pyathena_api.doctree  pyathena_api_specs.doctree  pyathena_utils_api_specs.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/commands/: client_sagemaker.rst.txt  pyathana.rst.txt  (+3 more)
docs/_build/html/_static/: alabaster.css
docs/_build/html/commands/: client_boto3.html  client_boto3_api_specs.html  client_emr.html  client_emr_api_specs.html  client_sagemaker.html  client_sagemaker_api_specs.html  pyathana.html  pyathena.html  pyathena_api.html  pyathena_api_specs.html  pyathena_utils_api_specs.html
docs/commands/: client_boto3.rst  client_boto3_api_specs.rst  client_emr.rst  client_emr_api_specs.rst  client_sagemaker_api_specs.rst  databricks_utils_api_specs.rst  mlflow_databricks.rst  mlflow_databricks_api_specs.rst  mlflow_prediction_requests.rst  mlflow_prediction_requests_api_specs.rst  mlflow_serve.rst  mlflow_serve_api_specs.rst  mlflow_tracker_databricks.rst  mlflow_tracker_databricks_api_specs.rst  mlflow_utils_databricks.rst  mlflow_utils_databricks_api_specs.rst  pyathena.rst  pyathena_api_specs.rst  pyathena_utils_api_specs.rst
hip_data_ml_utils/core/: config.py  databricks_utils.py  pyathena_utils.py
hip_data_ml_utils/databricks_client/: client.py
hip_data_ml_utils/mlflow_databricks/: mlflow_model_utils.py  mlflow_prediction_requests.py  mlflow_serve.py  mlflow_tracker.py
hip_data_ml_utils/pyathena_client/: client.py
pyathena_client/: client.py  pyathena_client.py
tests/: conftest.py  unit_test.parquet  unit_test.pkl
tests/core/: test_pyathena_utils.py
tests/data_ml_utils/boto3_botocore_client/: test_client_emr.py  test_client_initialisation.py  test_client_sagemaker.py
tests/data_ml_utils/core/: test_databricks_utils.py  test_pyathena_utils.py  test_yaml.yaml
tests/data_ml_utils/mlflow_databricks/: test_mlflow_model_utils.py  test_mlflow_prediction_requests.py  test_mlflow_serve.py  test_mlflow_tracker.py
tests/data_ml_utils/pyathena_client/: test_client.py
tests/hip_data_ml_utils/core/: test_databricks_utils.py  test_pyathena_utils.py
tests/hip_data_ml_utils/databricks_client/: test_client.py  test_databricks_client.py
tests/hip_data_ml_utils/mlflow_databricks/: test_mlflow_model_utils.py  test_mlflow_prediction_requests.py  test_mlflow_serve.py  test_mlflow_tracker.py
tests/hip_data_ml_utils/pyathena_client/: test_client.py
tests/pyathena_client/: test_client.py
tutorials/: [TUTO] emr.ipynb  [TUTO] mlflow_databricks.ipynb  [TUTO] pyathena.ipynb  [TUTO] sagemaker.ipynb
tutorials/tutorial_sql_schema/: create_table_schema.sql  int_active_tradies_count__tradie.yaml  msck_repair_table.sql  test_tutorial_table.yaml
