[tool.poetry]
name = "data_ml_utils"
version = "0.3.0"
description = ""
authors = ["Shu Ming Peh"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "1.4.4"
attrs = "20.3.0"
cfgv = "3.2.0"
coverage = "5.4"
distlib = "0.3.1"
filelock = "3.0.12"
identify = "1.5.13"
iniconfig = "1.1.1"
mccabe = "0.6.1"
mypy-extensions = "0.4.3"
nodeenv = "1.5.0"
pluggy = "0.13.1"
pre-commit = "2.10.0"
py = "1.10.0"
pyparsing = "2.4.7"
PyYAML = "5.4.1"
regex = "2020.11.13"
six = "1.15.0"
toml = "0.10.2"
typed-ast = "^1.5.3"
virtualenv = "20.4.2"
pytest-custom-exit-code = "0.3.0"
typing-extensions = "^4.2.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
moto = "^3.1.5"
polling = "0.3.2"
pydantic = "^1.9.0"
pyathena = "^2.13.0"
pandas = "1.3.5"
boto3 = ">=1.24.59"
botocore = ">=1.27.59"
aiobotocore = ">=2.4.2"
pyarrow = "7.0.0"
s3fs = "^2023.3.0"
packaging = ">=20.9"
numpy = "^1.22.4"
mlflow= "1.29.0"
joblib= "1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
