[tool.poetry]
name = "hip_data_ml_utils"
version = "1.4.6"
description = "Common Python tools and utilities for Hipages ML work"
authors = ["Hipages Tradie Marketplace Experience <shumingpeh@hipagesgroup.com.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
aiobotocore = "^2.8.0"
appdirs = "1.4.4"
attrs = "^22.2.0"
black = "^22.6.0"
boto3 = "^1.33.5"
botocore = "^1.34.15"
certifi = "^2023.7.22"
cfgv = "3.2.0"
coverage = "5.4"
databricks-sql-connector = "^3.3.0"
distlib = "^0.3.8"
filelock = "^3.14.0"
flake8 = "^4.0.1"
identify = "1.5.13"
iniconfig = "1.1.1"
isort = "^5.10.1"
joblib= "1.2.0"
mccabe = "0.6.1"
mlflow = "2.22.0"
mock = "^4.0.3"
moto = "^4.2.7"
mypy-extensions = "0.4.3"
nodeenv = "1.5.0"
numpy = "1.26.4"
packaging = "^23.1"
pandas = "2.2.3"
pluggy = "1.5.0"
polling = "0.3.2"
pre-commit = "2.10.0"
py = "^1.11.0"
pyarrow = "^14.0.1"
pyathena = "^2.25.2"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
pyparsing = "2.4.7"
pytest = "^8.3.3"
pytest-cov = "^3.0.0"
pytest-custom-exit-code = "0.3.0"
PyYAML = "6.0"
regex = "^2024.9.11"
requests = "^2.32.0"
responses = "0.23.1"
s3fs = "^2023.10.0"
six = "1.15.0"
toml = "0.10.2"
torch = "2.3.1"
typed-ast = "^1.5.3"
typing-extensions = "^4.4.0"
Werkzeug = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
